# docs/swagger.yaml
@@ -38,6 +38,71 @@ definitions:
           type: integer
         type: array
     type: object
+  models.Order:
+    properties:
+      createdAt:
+        type: string
+      deliveredAt:
+        type: string
+      id:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/models.OrderItem'
+        type: array
+      preparedAt:
+        type: string
+      status:
+        $ref: '#/definitions/models.OrderStatus'
+      ticketNumber:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
+      userID:
+        type: integer
+    required:
+    - status
+    - user
+    type: object
+  models.OrderItem:
+    properties:
+      id:
+        type: integer
+      orderContentDescription:
+        type: string
+      orderContentImage:
+        type: string
+      orderContentName:
+        type: string
+      orderContentPrice:
+        format: float64
+        type: number
+      orderID:
+        type: integer
+      quantity:
+        type: integer
+    type: object
+  models.OrderStatus:
+    enum:
+    - created
+    - inPreparation
+    - prepared
+    - delivered
+    type: string
+    x-enum-varnames:
+    - Created
+    - InPreparation
+    - Prepared
+    - Delivered
+  models.OrderUpdateInput:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/models.OrderItem'
+        type: array
+      ticketNumber:
+        type: string
+    type: object
   models.Product:
     properties:
       category:
@@ -327,6 +392,260 @@ paths:
       - BearerAuth: []
       tags:
       - Menus
+  /order:
+    post:
+      consumes:
+      - application/json
+      description: Créer une nouvelle commande
+      parameters:
+      - description: Données de la commande
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/models.Order'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Données invalides
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erreur interne
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
+  /orders:
+    get:
+      description: Récupérer toutes les commandes
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
+  /orders/{id}:
+    get:
+      description: Récupérerer une commande par son ID
+      parameters:
+      - description: ID de la commande
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: ID invalide
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Commande non trouvée
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erreur interne
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
+    put:
+      consumes:
+      - application/json
+      description: Mettre à jour une commande existante
+      parameters:
+      - description: ID de la commande
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Données de mise à jour
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.OrderUpdateInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Données invalides
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Commande non trouvée
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erreur interne
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
+  /orders/{id}/delivered:
+    patch:
+      consumes:
+      - application/json
+      description: Indiquer que la commande a été livrée
+      parameters:
+      - description: ID de la commande
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Données invalides
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Commande non trouvée
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erreur interne
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
+  /orders/{id}/in-preparation:
+    patch:
+      consumes:
+      - application/json
+      description: Indiquer que la commande est en préparation
+      parameters:
+      - description: ID de la commande
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Données invalides
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Commande non trouvée
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erreur interne
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
+  /orders/{id}/prepared:
+    patch:
+      consumes:
+      - application/json
+      description: Indiquer que la commande a été préparée
+      parameters:
+      - description: ID de la commande
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+        "400":
+          description: Données invalides
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Commande non trouvée
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erreur interne
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
   /product:
     post:
       consumes:
